# C-digo-TFG-Antonio-Mart-n-Acu-a

./: LICENSE  README.md
cap4_eda/: pyproject.toml  regen_plots.py  regen_plots_v2.py
cap4_preprocesado/: compare_stages.py  extract_model_data_standalone.py  requirements.txt  split_daily.py
cap4_preprocesado/configs/: pumps.yaml
cap4_preprocesado/pipeline/: __init__.py  baseline.py  classifier.py  data_selector.py  loader.py  main.py  period_detector.py  report.py  system_config.py
cap4_preprocesado/pipeline/custom_detectors/: __init__.py  differential_pressure.py  filter_condition.py  flow_anomaly.py  frequency_anomaly.py  hydraulic_deficit.py  ml_ensemble.py  outlet_pressure.py  winding_temp_imbalance.py
cap4_preprocesado/quality/: __init__.py  __main__.py  cleaner.py  extract_fw_pump_data_v3.py  labeler.py  main.py  operational_filter.py  quality_config.py  reporter.py  resampler.py
cap5_modelo_cvae/nivel_1/: pyproject.toml
cap5_modelo_cvae/nivel_1/model/: __init__.py  conformal_calibration.py  failure_detector.py  fine_tuning.py  inference.py  main.py  models.py  preprocessing.py  threshold_calibration.py
cap5_modelo_cvae/nivel_1/scripts/: test_imports.py  validate_arch.py
cap5_modelo_cvae/nivel_2/: pyproject.toml  recalibrate_thresholds.py
cap5_modelo_cvae/nivel_2/model/: __init__.py  device.py  failure_detector.py  fine_tuning.py  inference.py  main.py  models.py  preprocessing.py
cap5_modelo_cvae/nivel_2/tests/: test_vae_models.py
cap6_comparacion/comparison/: __init__.py  alternative_models.py  benchmark.py  classical_models.py  compare.py
cap7_ensemble/: pyproject.toml  simulation.py
cap7_ensemble/demos/: batch_evaluate.py  calibrate_thresholds.py  plotting_demo.py
cap7_ensemble/experiments/: e2_mahalanobis_calibration.py  e3_elbo_scoring.py  e4_benchmark.py  e6_fault_isolation.py  e7_fusion_weights.py  e8_per_channel_maxz.py  inv1_pump3_investigation.py  p7_seasonal_calibration.py  p8_joint_threshold_optimization.py
cap7_ensemble/model/: __init__.py  ensemble.py  inference.py  level1_detector.py  level2_detector.py  monitoring.py  scoring.py  streaming.py
cap7_ensemble/scripts/: conftest.py  smoke_test.py  test_alarm_monitor.py  test_channel_health.py  test_conformal_calibration.py  test_plotting_heatmap.py  test_savgol_parity.py  test_seasonal_thresholds.py  test_v1_channel_health.py
