[project]
name = "Stat_pump_analysis"
version = "0.1.0"
description = "Statistical analysis of normal and abnormal periods of HTF pumps"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]
