[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cond-reg-v2"
version = "0.1.0"
description = "Temporal Conditional VAE Regressor with Attention for pump anomaly detection"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyter"]

[tool.setuptools.packages.find]
where = [".."]
include = ["cond_reg_v2", "cond_reg_v2.*"]

[project.scripts]
cond-reg-v2 = "cond_reg_v2.model.main:main"
cond-reg-v2-calibrate = "cond_reg_v2.model.threshold_calibration:main"


# ============================================================================
# FINE-TUNING CONFIG (uncomment only on fine-tuning machine)
# ============================================================================
# Uncomment the following block ONLY when fine-tuning on Windows+CUDA machine
# [tool.uv]
# environments = ["sys_platform == 'win32'"]

# [[tool.uv.index]]
# name = "pytorch-nightly-cu128"
# url = "https://download.pytorch.org/whl/nightly/cu128"
# explicit = true

# [tool.uv.sources]
# torch = { index = "pytorch-nightly-cu128" }
# torchvision = { index = "pytorch-nightly-cu128" }
# torchaudio = { index = "pytorch-nightly-cu128" }
