[project]
name = "pumps-model"
version = "0.1.0"
description = "Pump failure detection using VAE/SAE models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "optuna>=4.7.0",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]

[project.scripts]
model = "model.main:main"
pumps-model = "model.main:main"
pumps-inference = "model.inference:main"
benchmark = "model.comparison.benchmark:main"
compare-models = "model.comparison.compare:main"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["model", "model.comparison"]

[tool.setuptools.package-data]
model = ["parameters/*.json"]

[dependency-groups]
dev = [
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "pytest>=9.0.3",
]


# ============================================================================
# FINE-TUNING CONFIG (uncomment only on fine-tuning machine)
# ============================================================================
# Uncomment the following block ONLY when fine-tuning on Windows+CUDA machine
# [tool.uv]
# environments = ["sys_platform == 'win32'"]

# [[tool.uv.index]]
# name = "pytorch-nightly-cu128"
# url = "https://download.pytorch.org/whl/nightly/cu128"
# explicit = true

# [tool.uv.sources]
# torch = { index = "pytorch-nightly-cu128" }
# torchvision = { index = "pytorch-nightly-cu128" }
# torchaudio = { index = "pytorch-nightly-cu128" }